log
Wed 08 May 2024 02:44:58 AM UTC: 
 tests:  1|8
total_score: 0/70
037c23a
Wed 08 May 2024 02:46:53 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:15: error: unused variable ‘new’ [-Werror=unused-variable]
   41 |     TreeMap * new = (TreeMap *)malloc(sizeof(TreeMap));
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
3dd0901
Wed 08 May 2024 02:47:36 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
320e6c3
